# mozc-cmake

.github/workflows/: cmake.yml
patches/: cmake.patch  protobuf.patch
src/: CMakeLists.txt  remove_protobuf_compilers.sh
src/base/: CMakeLists.txt
src/client/: CMakeLists.txt
src/composer/: CMakeLists.txt
src/config/: CMakeLists.txt
src/converter/: CMakeLists.txt
src/data_manager/: CMakeLists.txt
src/dictionary/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/ipc/: CMakeLists.txt
src/prediction/: CMakeLists.txt
src/protobuf/: CMakeLists.txt
src/rewriter/: CMakeLists.txt
src/server/: CMakeLists.txt
src/session/: CMakeLists.txt
src/storage/: CMakeLists.txt
src/transliteration/: CMakeLists.txt
src/unix/fcitx5/: CMakeLists.txt
src/usage_stats/: CMakeLists.txt
